WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178813
MediaSessionManager* needs to catch Obj-C exceptions
https://bugs.webkit.org/show_bug.cgi?id=178813
Summary
MediaSessionManager* needs to catch Obj-C exceptions
Simon Fraser (smfr)
Reported
2017-10-25 10:41:46 PDT
MediaSessionManager* needs to catch Obj-C exceptions
Attachments
Patch
(6.90 KB, patch)
2017-10-25 10:42 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-10-25 10:42:49 PDT
Created
attachment 324847
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-10-25 10:43:09 PDT
rdar://problem/35042211
Radar WebKit Bug Importer
Comment 3
2017-10-25 10:46:15 PDT
<
rdar://problem/35177224
>
Blaze Burg
Comment 4
2017-10-25 11:00:52 PDT
rdar://problem/35042211
WebKit Commit Bot
Comment 5
2017-10-25 11:21:45 PDT
Comment on
attachment 324847
[details]
Patch Clearing flags on attachment: 324847 Committed
r223963
: <
https://trac.webkit.org/changeset/223963
>
WebKit Commit Bot
Comment 6
2017-10-25 11:21:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug